2004-10-21  Derek Price  <derek@ximbiot.com>

	* malloc.m4: Remove this file.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* sunos57-select.m4: New file. Work around Solaris 7 select()
	hang.

2004-10-18  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update file from GNULIB.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* vasprintf.m4: New file from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* lstat.m4: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* stat.m4: Update from GNULIB.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* .cvsignore, Makefile.am, Makefile.in: Remove.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* getpass.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* strcase.m4: New file from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* ssize_t.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* stdbool.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* getopt.m4: Update from GNULIB.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* mkstemp.m4: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* fnmatch.m4: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* dirname.m4, dos.m4: Updated from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add gnulib.m4.
	* gnulib.m4: New file.
	* xalloc.m4: Update from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new and previously missing files.
	* eoverflow.m4, intmax.m4, printf-posix.m4: New files from GNULIB.
	* gettext.m4, glibc21.m4, intmax_t.m4, inttypes_h.m4, lib-ld.m4,
	lib-link.m4, lib-prefix.m4, longlong.m4, po.m4, stdint_h.m4,
	uintmax_t.m4, ulonglong.m4, vasnprintf.m4: Import most recent versions
	from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* save-cwd.m4: New file from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>
