@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday lstat malloc memmove minmax mkstemp mktime nanosleep pathmax regex restrict save-cwd stat stdbool strcase strerror time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday lstat malloc memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict save-cwd stat stdbool strcase strerror time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize
 
 AC_DEFUN([gl_EARLY],
 [
@@ -42,6 +42,7 @@ AC_DEFUN([gl_INIT],
   gl_FUNC_MKTIME
   gl_FUNC_NANOSLEEP
   gl_PATHMAX
+  AC_FUNC_REALLOC
   gl_REGEX
   gl_C_RESTRICT
   gl_SAVE_CWD
